--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="main_image">
-                <img src="image/main_img.png">
+                <img src="main_img.png">
             </div>
 
         </div>
@@ -64,7 +64,7 @@
         <div class="about_main">
 
             <div class="about_image">
-                <img src="image/about.png">
+                <img src="about.png">
             </div>
 
             <div class="about_text">
@@ -117,7 +117,7 @@
             <div class="menu_card">
 
                 <div class="menu_img">
-                    <img src="image/menu_1.jpg">
+                    <img src="menu_1.jpg">
                 </div>
 
                 <div class="menu_text">
@@ -145,7 +145,7 @@
             <div class="menu_card">
 
                 <div class="menu_img">
-                    <img src="image/menu_2.jpg">
+                    <img src="menu_2.jpg">
                 </div>
 
                 <div class="menu_text">
