--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="menu_card">
 
                 <div class="menu_img">
-                    <img src="image/menu_3.png">
+                    <img src="menu_3.png">
                 </div>
 
                 <div class="menu_text">
@@ -231,15 +231,15 @@
         <div class="gallery_box">
 
             <div class="gallery_image">
-                <img src="image/gallary_1.jpg">
+                <img src="gallary_1.jpg">
             </div>
 
             <div class="gallery_image">
-                <img src="image/gallary_2.jpg">
+                <img src="gallary_2.jpg">
             </div>
 
             <div class="gallery_image">
-                <img src="image/gallary_3.webp">
+                <img src="gallary_3.webp">
             </div>
 
         </div>
@@ -257,7 +257,7 @@
             <div class="offer_card_1">
 
                 <div class="offer_img">
-                    <img src="image/offer_1.jpg">
+                    <img src="offer_1.jpg">
                 </div>
 
                 <div class="offer_tag">
@@ -275,7 +275,7 @@
             <div class="offer_card_2">
 
                 <div class="offer_img">
-                    <img src="image/offer_2.png">
+                    <img src="offer_2.png">
                 </div>
 
                 <div class="offer_tag">
@@ -311,7 +311,7 @@
             <div class="team_card">
 
                 <div class="team_img">
-                    <img src="image/team_1.jpg">
+                    <img src="team_1.jpg">
                 </div>
 
                 <div class="team_tag">
@@ -329,7 +329,7 @@
             <div class="team_card">
 
                 <div class="team_img">
-                    <img src="image/team_2.jpg">
+                    <img src="team_2.jpg">
                 </div>
 
                 <div class="team_tag">
@@ -346,7 +346,7 @@
             <div class="team_card">
 
                 <div class="team_img">
-                    <img src="image/team_3.jpg">
+                    <img src="team_3.jpg">
                 </div>
 
                 <div class="team_tag">
@@ -363,7 +363,7 @@
             <div class="team_card">
 
                 <div class="team_img">
-                    <img src="image/team_4.jpg">
+                    <img src="team_4.jpg">
                 </div>
 
                 <div class="team_tag">
@@ -396,7 +396,7 @@
             <div class="blog_card">
 
                 <div class="blog_img">
-                    <img src="image/blog_1.jpeg">
+                    <img src="blog_1.jpeg">
                 </div>
 
                 <div class="blog_tag">
@@ -435,7 +435,7 @@
             <div class="blog_card">
 
                 <div class="blog_img">
-                    <img src="image/blog_2.jpg">
+                    <img src="blog_2.jpg">
                 </div>
 
                 <div class="blog_tag">
@@ -475,7 +475,7 @@
             <div class="blog_card">
 
                 <div class="blog_img">
-                    <img src="image/blog_3.jpg">
+                    <img src="blog_3.jpg">
                 </div>
 
                 <div class="blog_tag">
@@ -527,7 +527,7 @@
         <div class="oder_main">
 
             <div class="oder_img">
-                <img src="image/oder.png">
+                <img src="oder.png">
             </div>
 
             <div class="oder_form">
