--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Food Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="short icon" href="image/short_icon.png">
+    <link rel="short icon" href="short_icon.png">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
         <nav>
 
             <div class="logo">
-                <a href="index.html"><img src="image/logo.png"></a>
+                <a href="index.html"><img src="logo.png"></a>
             </div>
 
             <ul>
